Muitas mudanças. Muitas mudanças mesmo.
Essa versão já tem o update de Nícolas, com as melhorias dele. Além, tem melhorias adicionais.

Primeiro, note as mudanças da sessão, com a separação de método iniciaSessao() em defineSessao() e iniciaSessao(), além de um novo parâmetro "EMAIL". Você pode entender a necessidade ao ler a essência do código dessa minha parte.

Criação de perfil já funciona. Porém, ainda não sei como serão guardadas as coisas das habilidades. Por isso você a define na página de criação e não vê seu nome e descrição na página principal (isso seria somente uma forma de visualizar).

Note que apenas uma habilidade é setada na criação. As demais devem ser setadas nas configurações, e talvez nem aconteça nessa versão.

Devo ter esquecido de algo, mas creio que esses são os pontos principais. Todo o resto será falado por mim no próximo hangout.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".usuario.gui.MainActivity"
+        <activity
+            android:name=".infra.MainActivity"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +20,8 @@
         </activity>
         <activity android:name=".usuario.gui.LoginActivity" />
         <activity android:name=".usuario.gui.CadastroActivity" />
+        <activity android:name=".perfil.gui.TermosActivity" />
+        <activity android:name=".perfil.gui.HabilidadeActivity"></activity>
     </application>
 
 </manifest>
