--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".infra.gui.SplashScreenActivity"
+        <activity android:name=".infraestrutura.gui.SplashScreenActivity"
                   android:theme="@style/AppCompat.FullScreen">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -17,36 +17,36 @@
         </intent-filter>
     </activity>
         <activity
-            android:name=".infra.gui.MainActivity"
+            android:name=".infraestrutura.gui.MainActivity"
             android:windowSoftInputMode="stateHidden">
         </activity>
         <activity
-            android:name=".usuario.gui.LoginActivity"
+            android:name=".infraestrutura.gui.LoginActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".usuario.gui.CadastroActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
-            android:name=".infra.gui.TermosActivity"
+            android:name=".infraestrutura.gui.TermosActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".perfil.gui.HabilidadeActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
-        <activity android:name=".infra.gui.ConfiguracaoActivity">
+        <activity android:name=".infraestrutura.gui.ConfiguracaoActivity">
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
-            android:value=".infra.gui.MainActivity"/>
+            android:value=".infraestrutura.gui.MainActivity"/>
         </activity>
-        <activity android:name=".infra.gui.HomeActivity" />
-        <activity android:name=".infra.gui.CadastroMateriaActivity">
+        <activity android:name=".infraestrutura.gui.HomeActivity" />
+        <activity android:name=".infraestrutura.gui.CadastroMateriaActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".infra.gui.MainActivity"/>
+                android:value=".infraestrutura.gui.MainActivity"/>
         </activity>
-        <activity android:name=".infra.gui.BuscaActivity">
+        <activity android:name=".infraestrutura.gui.BuscaActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".infra.gui.MainActivity"/>
+                android:value=".infraestrutura.gui.MainActivity"/>
         </activity>
     </application>
 
