--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name=".infraestrutura.gui.LoginActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
-            android:name=".usuario.gui.CriarContaActivity"
+            android:name=".pessoa.gui.CriarContaActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".infraestrutura.gui.TermosActivity"
@@ -33,13 +33,13 @@
         <activity
             android:name=".perfil.gui.HabilidadeActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
-        <activity android:name=".infraestrutura.gui.ConfiguracaoActivity">
+        <activity android:name=".pessoa.gui.ConfiguracaoActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".infraestrutura.gui.MainActivity" />
         </activity>
         <activity android:name=".infraestrutura.gui.HomeActivity" />
-        <activity android:name=".infraestrutura.gui.CadastroHabilidadeActivity">
+        <activity android:name=".perfil.gui.CadastroHabilidadeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".infraestrutura.gui.MainActivity" />
@@ -50,10 +50,10 @@
                 android:value=".infraestrutura.gui.MainActivity" />
         </activity>
         <activity android:name=".perfil.gui.NecessidadeActivity" />
-        <activity android:name=".infraestrutura.gui.AlterarNomeActivity" />
-        <activity android:name=".infraestrutura.gui.AlterarEmailActivity" />
-        <activity android:name=".infraestrutura.gui.AlterarSenhaActivity" />
-        <activity android:name=".infraestrutura.gui.CadastroNecessidadeActivity" />
+        <activity android:name=".pessoa.gui.AlterarNomeActivity" />
+        <activity android:name=".pessoa.gui.AlterarEmailActivity" />
+        <activity android:name=".pessoa.gui.AlterarSenhaActivity" />
+        <activity android:name=".perfil.gui.CadastroNecessidadeActivity" />
         <activity android:name=".perfil.gui.ListarHabilidadesActivity" />
         <activity android:name=".perfil.gui.ListarNecessidadesActivity"></activity>
     </application>
