--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,6 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".infraestrutura.gui.MainActivity"
-            android:windowSoftInputMode="stateHidden" />
-        <activity
             android:name=".infraestrutura.gui.LoginActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
@@ -32,14 +29,15 @@
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".perfil.gui.HabilidadeActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            />
+        <activity
+            android:name=".perfil.gui.NecessidadeActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
+            android:name=".infraestrutura.gui.MainActivity"
+            android:windowSoftInputMode="stateHidden" />
         <activity android:name=".pessoa.gui.ConfiguracaoActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".infraestrutura.gui.MainActivity" />
-        </activity>
-        <activity android:name=".infraestrutura.gui.HomeActivity" />
-        <activity android:name=".perfil.gui.CadastroHabilidadeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".infraestrutura.gui.MainActivity" />
@@ -49,13 +47,41 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".infraestrutura.gui.MainActivity" />
         </activity>
-        <activity android:name=".perfil.gui.NecessidadeActivity" />
-        <activity android:name=".pessoa.gui.AlterarNomeActivity" />
-        <activity android:name=".pessoa.gui.AlterarEmailActivity" />
-        <activity android:name=".pessoa.gui.AlterarSenhaActivity" />
-        <activity android:name=".perfil.gui.CadastroNecessidadeActivity" />
-        <activity android:name=".perfil.gui.ListarHabilidadesActivity" />
-        <activity android:name=".perfil.gui.ListarNecessidadesActivity"></activity>
+        <activity android:name=".pessoa.gui.AlterarNomeActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".pessoa.gui.ConfiguracaoActivity" />
+        </activity>
+        <activity android:name=".pessoa.gui.AlterarEmailActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".pessoa.gui.ConfiguracaoActivity" />
+        </activity>
+        <activity android:name=".pessoa.gui.AlterarSenhaActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".pessoa.gui.ConfiguracaoActivity" />
+        </activity>
+        <activity android:name=".perfil.gui.CadastroNecessidadeActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".perfil.gui.ListarNecessidadesActivity" />
+        </activity>
+        <activity android:name=".perfil.gui.CadastroHabilidadeActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".perfil.gui.ListarHabilidadesActivity" />
+        </activity>
+        <activity android:name=".perfil.gui.ListarHabilidadesActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".infraestrutura.gui.MainActivity" />
+        </activity>
+        <activity android:name=".perfil.gui.ListarNecessidadesActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".infraestrutura.gui.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
