--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data android:name="android.app.default_searchable"
-            android:value=".infraestrutura.gui.BuscaActivity"/>
+        <meta-data
+            android:name="android.app.default_searchable"
+            android:value=".infraestrutura.gui.BuscaActivity" />
+
         <activity
             android:name=".infraestrutura.gui.SplashScreenActivity"
             android:theme="@style/AppCompat.FullScreen">
@@ -78,6 +80,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".infraestrutura.gui.MainActivity" />
         </activity>
+        <activity android:name=".pessoa.gui.AlterarDescricaoActivity"></activity>
     </application>
 
 </manifest>
